--- a/Proyecto/admin-index.html
+++ b/Proyecto/admin-index.html
@@ -31,7 +31,7 @@
 
         <div class="info">
           <h2>Usuarios</h2>
-          <p>Gestiona los usuarios registrados: administradores, clientes y vendedores.</p>
+          <p>Gestiona los usuarios registrados: administradores y clientes.</p>
           <a href="admin-usuarios.html" class="btn">Ver Usuarios</a>
         </div>
       </section>
